<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Money Converter">
    ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="last_update">Останнє оновлення: %s</string>
    <string name="uah_code">UAH</string>
    <string name="uah_name">Українська гривня</string>
    <string name="error_msg">Отакої! Щось пішло не так!</string>
    <string name="label">Хочу придбати %s</string>
    <string name="curr_exch_line">Курс обміну %s%s - %1.4f</string>
    <string name="hint_zeros">0.00</string>
    <string name="try_again_button">Спробувати ще раз</string>
    <string name="rate_format">%10.4f</string>
    <string name="currency_amount">1</string>
    <string name="about_menu_item">Про додаток</string>
    <string name="version_info">Версія: %s</string>
    <string name="amount_needed_label">Необхідна кількість %s</string>
    <string name="action_open_drawer">Відкрити меню</string>
    <string name="action_close_drawer">Закрити меню</string>
    <string name="parse_error_message">Невірний формат. Ви ввели число вірно?</string>
    <string name="exchange_rate_list_label">Курс валют</string>
    <string name="about">Про додаток</string>
    <string name="subject">Відгук про програму \"&appname;\"</string>
    <string name="send_email">Відправити повідомлення, використовуючи: </string>
    <string name="send_feedback_protocol">mailto</string>
    <string name="feedback_email_address">bad_coders_unreal_email_address@gmail.com</string>
    <string name="send_feedback">Відправити відгук</string>
    <string name="email_intent_resolve_error">Відсутня програма для обміну е-мейл повідомлень!</string>
    <string name="guest_label">Гість</string>
    <string name="action_login">Увійти (створити аккаунт)</string>
    <string name="action_logout">Вийти</string>
    <string name="login_tip">Зареєструйтесь чи увійдіть у свій аккаунт!</string>
    <string name="settings_label">Налаштування</string>
    <string name="app_settings_category_title">Налаштування програми</string>
    <string name="main_cur_label">Основна валюта</string>
    <string name="profile_settings_title">Налаштування профілю</string>
    <string name="operation_success_toast">Зміна %s успішна!</string>
    <string name="change_email_label">Електронна адреса</string>
    <string name="change_password_label">Пароль</string>
    <string name="change_name_label">Ім\'я</string>
    <string name="change_email_mes">ел. адреси</string>
    <string name="change_password_mes">паролю</string>
    <string name="change_name_mes">ім\'я</string>
    <string name="action_delete">Видалити аккаунт</string>
    <string name="delete_success">Аккаунт видалено!</string>
    <string name="maps_fragment_label">Найближчий банк</string>
    <string name="gps_error_msg">Без даних про місцеположення діла не буде!</string>
    <string name="recently_login_error">Щоб виконати цю операція необхідно виконати повторну авторизацію!</string>
    <string name="graphic_label">Графік зміни курсу за 5 років</string>
    <string name="converter_label">Конвертер</string>
    <string name="connection_error">Невдалося підключитися до серверу. Помилка - %s</string>
    <string name="bank_key" translatable="false">bank</string>
    <string name="info_extra_key">info</string>
</resources>
