<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/profile_settings_title"/>
    <EditTextPreference
        android:inputType="textEmailAddress"
        android:key="email_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_email_label"/>
    <EditTextPreference
        android:inputType="textPassword"
        android:key="password"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_password_label"/>
    <EditTextPreference
        android:key="name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_name_label"/>
</PreferenceScreen>