<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="rateViewModel"
            type="com.bad_coders.moneyconverter.ViewModel.RateListItemViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:onClick="@{(view) -> rateViewModel.onItemClick(view, rateViewModel.currency)}">

        <TextView
            android:id="@+id/base_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:minWidth="30dp"
            android:text="@string/currency_amount"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/base_cur_name"
            style="@style/rate_symb"
            android:text="@{rateViewModel.currency.curSymb}"
            app:layout_constraintEnd_toStartOf="@+id/exchange_rate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/base_currency"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="EUR"/>

        <TextView
            android:id="@+id/cur_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:maxWidth="100dp"
            android:text="@{rateViewModel.currency.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/exchange_rate"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/base_currency"
            app:layout_constraintTop_toBottomOf="@+id/base_cur_name"
            tools:text="українська гривня"/>

        <TextView
            android:id="@+id/exchange_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@{String.format(@string/rate_format, rateViewModel.currency.rate)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/uah_code_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="31.25"/>

        <TextView
            android:id="@+id/uah_code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/uah_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            app:layout_constraintBottom_toBottomOf="@+id/base_cur_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/full_name_uah"
            app:layout_constraintTop_toTopOf="@+id/base_cur_name"/>

        <TextView
            android:id="@+id/full_name_uah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:maxWidth="100dp"
            android:text="@string/uah_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uah_code_label"
            app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>
</layout>